# doggy_bsp

./: README.md  install.sh  install_after.sh  install_doggy-release.sh  prepare_dkms.sh  test.sh
IO_Configuration/: install.sh
IO_Configuration/origin/: config.txt
IO_Configuration/ubuntu_24.04/: config.txt
PWMController/: pwm_pca9685.c
Python_Module/: setup.cfg
Python_Module/DoggyFun/Adafruit_GPIO/: GPIO.py
Python_Module/DoggyFun/doggy/: Config.py  HardwareInterface.py  ServoCalibration.py  calibrate_servos.py  calibrate_tool.py  capabilities.py  set_servos_before_assembly.py
System/: rc.local
servo/: servo.py
