[metadata]
name             = DoggyFun
summary          = DoggyFun code for mini_pupper
description_file = README.rst
author           = DoggyFun
author_email     = fae@DoggyFun.net
home_page        = https://www.DoggyFun.net

[files]
packages         = DoggyFun

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = True

[options.package_data]
* = *.png

[entry_points]
console_scripts =
    calibrate = DoggyFun.mini_pupper.calibrate_tool:main
    cli-calibrate = DoggyFun.mini_pupper.calibrate_servos:main
    set-servos-before-assembly = DoggyFun.mini_pupper.set_servos_before_assembly:main

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
